[metadata]
name = testrail-data
version = 0.0.2
author = Max Leow
author_email = maxengiu@outlook.com
description = Pandas DataFrame integrated API wrapper for Testrail
long_description = file: README.md
long_description_content_type = text/markdown
install_requires=
    testrail-api<2
    pandas
url = https://github.com/maxleow/testrail_data
project_urls =
    Bug Tracker = https://github.com/maxleow/testrail_data/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent